--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.4.6",
     "react-router-dom": "^7.5.2",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.2.0",
